--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uuid": "^7.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
+    "tslint-angular": "^3.0.2",
     "typescript": "~3.5.3"
   }
 }
