--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/gateway": {
-    "target": "https://homepi:5000",
+    "target": "http://homepi:5000",
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true
