jest, tests fixed

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,10 +5,11 @@
     "types": [
       "jasmine",
       "node"
-    ]
+    ],
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true
   },
   "files": [
-    "src/test.ts",
     "src/polyfills.ts"
   ],
   "include": [
