--- a/angular.json
+++ b/angular.json
@@ -93,10 +93,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-            ],
+            "styles": [],
             "scripts": []
           }
         },
