--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ngcc"
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@orchestrator/ngx-until-destroyed": "^1.1.1",
+    "lodash": "^4.17.20",
     "rxjs": "~6.6.0",
     "rxjs-blocking-queue": "^1.0.2",
     "tslib": "^1.10.0",
@@ -36,19 +37,31 @@
     "@angular/language-service": "~9.1.12",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "jest": "^26.4.2",
+    "jest-preset-angular": "^8.3.1",
     "protractor": "~5.4.0",
+    "ts-jest": "^26.4.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "tslint-angular": "^3.0.2",
     "typescript": "~3.8.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupJest.ts"
+    ],
+    "roots": [
+      "src"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/src/test.ts"
+    ]
   }
 }
