--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#41271C",
-        "titleBar.activeBackground": "#5C3627",
-        "titleBar.activeForeground": "#FCF9F8"
-    }
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#41271C",
+    "titleBar.activeBackground": "#5C3627",
+    "titleBar.activeForeground": "#FCF9F8"
+  },
+  "jest.autoEnable": false,
+  "jest.enableCodeLens": true,
+  "jest.debugCodeLens.showWhenTestStateIn": ["fail", "unknown", "pass", "skip"]
 }
