--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "tslint-angular": "^3.0.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.8.3"
   },
   "jest": {
